# MailGenius

./: .env.sample  README.md  pyproject.toml
base/: services.py
blog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_created_at.py  0003_alter_blog_published_at.py  0004_remove_blog_published_at.py
blog/templates/blog/: blog_detail.html  blog_list.html
client/: admin.py  cron.py  forms.py  models.py  urls.py  views.py
client/migrations/: 0001_initial.py  0002_client_owner.py
client/templates/client/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html
config/: settings.py  urls.py
json_data/: auth.json  blog.json  client.json  mailing.json  users.json
mailing/: admin.py  cron.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: start_mailing.py
mailing/mangement/commands/: start_mailing.py
mailing/migrations/: 0001_initial.py  0002_alter_mailingsettings_status.py  0002_mailingsettings_owner_message_owner.py  0002_message_settings_alter_mailingsettings_clients.py  0003_alter_mailingsettings_frequency.py  0003_alter_mailingsettings_options.py  0003_remove_message_settings_mailingsettings_message.py  0004_alter_mailingsettings_status.py  0005_mailingsettings_next_sending.py  0006_mailingsettings_end_on.py
mailing/templates/mailing/: base.html  index.html  (+10 more)
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/: login.html  profile.html
(+4 files in other folders)
