[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Alexandra Goldobina <goldobina.s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
certifi = "^2024.8.30"
django-crontab = "^0.7.1"
ipython = "^8.27.0"
black = "^24.8.0"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.2"
pillow = "^10.4.0"
django = "4.2.2"
redis = "^5.1.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
